ploop: introduce ploop format for --layout/VE_LAYOUT
ploop format (expanded, plain or raw) can be specified after a colon,
like this:

  VE_LAYOUT=ploop:plain
  vzctl create 101 --layout ploop:expanded

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -143,7 +143,7 @@ _vzctl()
 				COMPREPLY=( $( compgen -W "$configs" -- $cur ) )
 				;;
 			--layout)
-				COMPREPLY=( $( compgen -W "ploop simfs" -- $cur ) )
+				COMPREPLY=( $( compgen -W "ploop ploop:expanded ploop:plain ploop:raw simfs" -- $cur ) )
 				;;
 			--iptables)
 				COMPREPLY=( $( compgen -W "$iptables_names" -- $cur ) )
