--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -747,7 +747,7 @@ This command restores a container from the dump file created by the
 .I CTID
 .OP --ostemplate name
 .OP --config name
-.OP --layout \fBsimfs\fR|\fBploop
+.OP --layout \fBsimfs\fR|\fBploop\fR[\fB:\fR{\fBplain\fR|\fBexpanded\fR|\fBraw\fR}]
 .OP --private path
 .OP --root path
 .OP --ipadd addr
@@ -775,7 +775,10 @@ already exists.
 A new container can either be created using \fBsimfs\fR filesystem or
 on a \fBploop\fR device. The default is set by value of \fBVE_LAYOUT\fR
 parameter of \fBvz.conf\fR(5) and can be overwritten by \fB--layout\fR
-option.
+option. In case \fBploop\fR is used, one can additionally specify ploop
+disk image format after a colon. Possible ploop formats are \fBexpanded\fR,
+\fBplain\fR and \fBraw\fR. Default is \fBexpanded\fR.
+Using \fBraw\fR is not recommended and is not supported.
 
 You can use \fB--root\fR \fIpath\fR option to sets the path to the mount
 point for the container root directory (default is \fBVE_ROOT\fR specified in
