--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -620,8 +620,13 @@ allows to enable or disable disk quota for a container. By default,
 a global value (\fBDISK_QUOTA\fR) from \fBvz.conf\fR(5) is used.
 .TP
 \fB--diskspace\fR \fInum\fR[:\fInum\fR]
-sets soft and hard disk quota limits, in blocks. First parameter is soft limit,
+For \fBsimfs\fR layout, sets soft and hard disk quota limits, in blocks.
+First parameter is soft limit,
 second is hard limit. One block is currently equal to 1Kb.
+
+For \fBploop\fR layout, sets the size of the ploop image file, in
+kilobytes.
+
 Suffixes \fBG\fR, \fBM\fR, \fBK\fR can also be specified
 (see \fBResource limits\fR section for more info on suffixes).
 .TP
