--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -58,7 +58,7 @@ _vzctl()
 		set start stop restart status quotaon quotaoff quotainit \
 		enter exec exec2 runscript convert console"
 	local vzctl_create_opts="--ostemplate --config --private --root \
-		--layout --ipadd --hostname --name --description"
+		--layout --diskspace --ipadd --hostname --name --description"
 	local vzctl_convert_opts="--layout"
 	local vzctl_set_opts="--save --onboot --root --private \
 		--userpasswd --disabled --ipadd --ipdel \
