ploop 2nd-level quota support part 1/2
In ploop case, quota is native ext4, so we don't have to do much about it,
just create a device and grant appropriate permissions.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -1089,6 +1089,8 @@ Container private area not exist
 Parameter \fBDISKSPACE\fR not set
 .IP 64
 Parameter \fBDISKINODES\fR not set
+.IP 65
+Error setting second-level (ugid) quota
 .IP 66
 \fBvzquota off\fR failed
 .IP 67
