etc/init.d/vz*: quote grep argument
This is how it was:

	# /etc/init.d/vz start
	...
	grep: #: No such file or directory
	grep: Use: No such file or directory
	grep: vswap-256m: No such file or directory
	grep: on: No such file or directory
	grep: RHEL6: No such file or directory
	grep: kernel$: No such file or directory

Quote the argument to prevent this madness. Strange that no one noticed it.

This is a fix to commit e2cb23b.
http://bugzilla.openvz.org/2169

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -249,7 +249,7 @@ modify_vzconf()
 	local cfg_new='CONFIGFILE="vswap-256m"'
 	local kv=$(cat /proc/vz/version | sed 's/\(test\|stab\).*$//')
 	if test $kv -ge 42; then
-		if grep -q $cfg_old $VZCONF; then
+		if grep -q "$cfg_old" $VZCONF; then
 			sed -i "s/${cfg_old}/${cfg_new}/" $VZCONF
 			ewarn "Setting $cfg_new in $VZCONF"
 		fi
