ploop: add lib/xml.c
To be used by next commits.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,8 @@ AC_CHECK_LIB(ploop, ploop_mount_image,
 	PLOOP_LIBS="-lploop", AC_MSG_ERROR([ploop lib not found]),)
 AC_SUBST(PLOOP_LIBS)
 
+AM_PATH_XML2(2.6.16)
+
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h \
 	sys/file.h sys/ioctl.h sys/mount.h sys/param.h sys/socket.h \
