src/lib/Makefile.am: make library version the same as vzctl version
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -24,7 +24,7 @@ AM_CFLAGS = -DSBINDIR=\"$(sbindir)\" \
             -DPKGLIBDIR=\"$(pkglibdir)\" \
             $(XML_CPPFLAGS)
 
-LIB_VER = 0.0.3
+LIB_VER = $(VERSION)
 
 lib_LTLIBRARIES = libvzctl.la
 
