--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -192,7 +192,7 @@ do_download()
 	local ret
 
 	trap "rm -f ${dst}" INT TERM
-	wget -P $TCACHEDIR -N ${src}
+	wget -P $(dirname ${dst}) -N ${src}
 	ret=$?
 	trap - INT TERM
 	if test $ret -eq 0; then
@@ -221,7 +221,7 @@ download()
 				return 2
 			fi
 			# Check if the file is there
-			if wget -q --spider -P $TCACHEDIR ${src}; then
+			if wget -q --spider -P $(dirname ${dst}) ${src}; then
 				# Download it
 				do_download "$src" "$dst"
 				return
