--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -358,7 +358,7 @@ Here is an example of setting container 777 to have
 The following options sets barrier and limit for various user beancounters.
 .PP
 Note that for VSwap-enabled kernels (version 042stab042 or greater) these
-limits are optional, you must only set \fB--ram\fR and \fR--swap\fR
+limits are optional, you must only set \fB--ram\fR and \fB--swap\fR
 (see above). For older kernels, these limits are obligatory.
 .PP
 Each option requires one or two arguments. In case of one argument,
