vzctl(8): explain host_mac value for bridge.
Documentation doesn't specify anything about proper MAC address values for veth.

If I specify 'mac' in NETINF, the 'host_mac' will be the same, and with
bridge communication I have:

	veth246.0: received packet with own address as source address

When OpenVZ automatically assigns address for host veth interface, address
is ie. 00:18:51:8a:7a:64. For the bridge communication right one should be
like FE:FF:FF:FF:FF:FF.

The problem isn't new:
http://openvz.org/pipermail/users/2010-May/003477.html

http://bugzilla.openvz.org/2210

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -295,6 +295,9 @@ interface name for virtual interface in the host system.
 .TP
 \fB--host_mac\fR \fIXX:XX:XX:XX:XX:XX\fR
 MAC address of interface in the host system.
+
+If you want an independent communication with the Container through the bridge,
+you should specify a multicast MAC address here (FE:FF:FF:FF:FF:FF).
 .TP
 \fB--bridge\fR \fIname\fR
 Bridge name. Custom network start scripts can use this value to automatically
