etc/init.d/initd-functions: fixes for dash
Use . not 'source'.

Note that checkbashisms still complain about three places:

possible bashism in /usr/lib/vzctl/scripts/initd-functions line 47 ($"foo" should be eval_gettext "foo"):
		failure $"$1"
possible bashism in /usr/lib/vzctl/scripts/initd-functions line 58 ($"foo" should be eval_gettext "foo"):
		warning $"$1"
possible bashism in /usr/lib/vzctl/scripts/initd-functions line 79 ($"foo" should be eval_gettext "foo"):
		echo -n $"$1"

But all these places are for $DISTR = "redhat" case.

Reported-by: Konstantin Khlebnikov <khlebnikov@openvz.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -16,12 +16,12 @@ VARLOCK=/var/lock/subsys
 
 # Source function library.
 if [ -r /etc/init.d/functions ]; then
-	source /etc/init.d/functions
+	. /etc/init.d/functions
 	if [ -r /etc/redhat-release ] || [ -r /etc/centos-release ]; then
 		DISTR=redhat
 	fi
 elif [ -r /etc/rc.status ]; then
-	source /etc/rc.status
+	. /etc/rc.status
 	if [ -r /etc/SuSE-release ]; then
 		DISTR=suse
 	fi
