--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -176,21 +176,24 @@ configuration file \fBvz.conf\fR(5), or to \fB0\fR if not set by
 .YS
 .IP "" 4
 This command sets various container parameters.
-
-If a \fB--save\fR flag is given,
-parameters are saved in container configuration file \fBctid.conf\fR(5).
-Use \fB--force\fR to save the parameters even if the current kernel
-doesn't support OpenVZ.
-
 If the container is currently running, \fBvzctl\fR applies these parameters
-to the container.
+to the container. The following options can be used with \fBset\fR command.
 
-Note that a few parameters can only be applied by restarting the container.
+.SS3 Flags
+.TP
+.B --save
+If this flag is given, parameters are saved in container configuration file
+\fBctid.conf\fR(5).
+.TP
+.B --force
+If this flag is given together with \fB--save\fR, parameters are saved
+even if the current kernel doesn't support OpenVZ.
+.TP
+\fB--setmode\fR \fBrestart\fR | \fBignore\fR
+A few parameters can only be applied by restarting the container.
 By default, \fBvzctl\fR warns if such parameters are present and a container
 is running. Use \fB--setmode restart\fR to restart a container in such a case,
 or \fB--setmode ignore\fR to suppress the above mentioned warning.
-
-The following parameters can be used with \fBset\fR command.
 
 .SS3 Miscellaneous
 .TP
