Fix qheld and qmaxheld stuff in vzubc.
http://bugzilla.openvz.org/show_bug.cgi?id=2238

Qheld is now 0.5 by default, and qmaxheld 0.8, not vice versa. Also
qheld must be less than qmaxheld, not vice versa.

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -6,9 +6,9 @@
 umask 0077
 
 # Ratio of held/limit to bypass quiet
-Q_HELD=0.8
+Q_HELD=0.5
 # Ratio of maxheld/limit to bypass quiet
-Q_MAXHELD=0.5
+Q_MAXHELD=0.8
 # Directory to store previous failcnt values for relative mode
 STOREDIR=/tmp/vzubc.store
 # Colors
@@ -245,8 +245,8 @@ bcid, inc ? "  +/-  " : "", rel ? "+" : " ", inc ? "-------" : "")
 }
 
 BEGIN {
-	if (qmaxheld > qheld)
-		qmaxheld=qheld
+	if (qheld > qmaxheld)
+		qheld=qmaxheld
 	prepare_header()
 	bcid=-1
 }
