vzubc: add ability to specify -qh and -qm in %
If value is more than 1, it is assumed to be in per cent.
So, now -qh 0.5 and -qh 50 will do the same thing.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 # vzubc - a tool for displaying OpenVZ user beancounters.
-# Copyright (C) 2011, Parallels, Inc. All rights reserved.
+# Copyright (C) 2011-2012, Parallels, Inc. All rights reserved.
 # Licensed under GNU GPL v2 or later version.
 
 umask 0077
@@ -245,6 +245,10 @@ bcid, inc ? "  +/-  " : "", rel ? "+" : " ", inc ? "-------" : "")
 }
 
 BEGIN {
+	if (qheld > 1)
+		qheld /= 100
+	if (qmaxheld > 1)
+		qmaxheld /= 100
 	if (qheld > qmaxheld)
 		qheld=qmaxheld
 	prepare_header()
