--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -79,7 +79,8 @@ _vzctl()
 	local vzctl_start_opts="--wait --force"
 	local vzctl_stop_opts="--fast"
 	local vzctl_restart_opts="$vzctl_start_opts $vzctl_stop_opts"
-	local vzctl_snapshot_create_opts="--id --name --description"
+	local vzctl_snapshot_create_opts="--id --name --description \
+		--skip-suspend"
 
 	local iptables_names="iptable_filter iptable_mangle ipt_limit
 		ipt_multiport ipt_tos ipt_TOS ipt_REJECT ipt_TCPMSS
