vzctl(8): describe --name and --description for vzctl snapshot
Somehow they were omitted.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -791,13 +791,17 @@ the container is running, it's in-memory state (as in checkpointing).
 Note that snapshot functionality is only working
 for containers on ploop device.
 .TP 4
-\fBsnapshot\fR \fICTID\fR [\fB--id\fR \fIuuid\fR] [\fB--skip-suspend\fR]
+\fBsnapshot\fR \fICTID\fR [\fB--id \fIuuid\fR] [\fB--name \fIname\fR] [\fB--description \fIdesc\fR] [\fB--skip-suspend\fR]
 Creates a container snapshot. If \fIuuid\fR is not specified, it is
 auto-generated.
 
 If a container is running, and \fB--skip-suspend\fR option is not specified,
 a container is checkpointed and then restored, and CT memory dump becomes the
 part of snapshot. Otherwise, only file system state is saved.
+
+Options \fB--name\fR and \fB--description\fR can be used to specify the
+snapshot name and description, respectively. Name is displayed by
+\fBsnapshot-list\fR.
 .TP 4
 \fBsnapshot-switch\fR \fICTID\fR \fB--id\fR \fIuuid\fR
 Switches the container to a snapshot identified by \fIuuid\fR.
