bash_completion: for vzctl snapshot*, only show ploop CTs
This makes CTID completion for vzctl snapshot* more intelligent.
As we can only snapshot CTs using ploop layout, let's show
only ploop CTs.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -40,6 +40,13 @@ _get_ves()
 				grep '^simfs ' | \
 				sed 's/^simfs *//' | $rm_empty
 			;;
+		snapshot*)
+			# CTs on ploop
+			(@SBINDIR@/vzlist -H -a -o layout,ctid;
+			 @SBINDIR@/vzlist -H -a -o layout,name) 2>/dev/null | \
+				grep '^ploop ' | \
+				sed 's/^ploop *//' | $rm_empty
+			;;
 		*)
 			# All CTs
 			@SBINDIR@/vzlist -H -a -octid 2>/dev/null
